# AI-Agents

./: .gitignore  AGENTES-I.md  AGENTES-II.md  main.py  pyproject.toml  requirements.txt
ch01/: assistente_simples.py  hello_llm.py  tradutor.py
ch02/: assistente_contextualizado.py  chatbot_com_memoria.py  conversa_estruturada.py  prompt_com_data.py  prompt_dinamico.py
ch03/: assistente_celsius_fahrenheit.py  assistente_com_tools.py  binding_tools.py  executar_tools.py  tool_com_pydantic.py  tool_simples.py  tool_tarefas.py
ch06/: agente_react_completo.py  grafo_contador.py  grafo_llm.py
tarefa/: chatbot.py  produtos.db
